--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -5,7 +5,7 @@
     <div class="row">
     
 {{#each products}}
-  <div class="col-md-3 p-3"  >
+  <div class="col-md-3 p-3" >
     <div class="card" style="width: 15rem; height: 34rem">
       <img class="card-img-top" src="/product-images/{{this._id}}.jpg" 
       alt="Card image cap">
@@ -13,7 +13,8 @@
         <h5 class="card-title">{{this.Name}}</h5>
         <p class="card-text">{{this.Description}}</p>
         <p class="card-price">{{this.price}}</p>
-        <a href="#" class="btn btn-primary">Add to Cart</a>
+        {{!-- <a href="/add-to-cart/{{this._id}}" class="btn btn-primary">Add to Cart</a> --}}
+        <button onclick="addToCart('{{this._id}}')" class="btn btn-primary">Add to cart</button>
       </div>
     </div>
   </div>
@@ -24,5 +25,7 @@
     </div>
     </div>
   </section>
+
+ 
 
    
