--- a/views/user/orders.hbs
+++ b/views/user/orders.hbs
@@ -19,7 +19,7 @@
             <tbody>
                 {{#each orders}}
                 <tr>
-                    <td>{{this.DeliveryDetails.date}}</td>
+                    <td>{{this.Date}}</td>
                     <td>{{this.DeliveryDetails.address}}</td>
                     <td>{{this.DeliveryDetails.pincode}}</td>
                     <td>{{this.DeliveryDetails.mobile}}</td>
