--- a/views/user/view-order-products.hbs
+++ b/views/user/view-order-products.hbs
@@ -9,7 +9,7 @@
                         <img class="card-img-top" src="/product-images/{{this._id}}.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">{{this.productName}}</h5>
-                            <p class="card-text">{{this.Description}}</p>
+                            <p class="card-text">{{this.quantity}}</p>
                             <p class="card-price">{{this.price}}</p>
                         </div>
                     </div>
